<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.shivani.the_brains_connection_to_the_five_senses.MainActivity"
    android:background="#ffffff">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_title"
        android:id="@+id/app_title"
        android:autoText="false"
        android:singleLine="false"
        android:textSize="25sp"
        android:textAlignment="center"
        android:layout_alignTop="@+id/imageView"
        android:layout_alignParentStart="true" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_alignParentStart="true"
        android:src="@mipmap/main_brain"
        android:layout_alignParentTop="true"
        android:id="@+id/imageView"
        android:contentDescription="@string/main_brain_image"
        android:baselineAlignBottom="true" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="30sp"
        android:text="@string/smell_button_label"
        android:id="@+id/smell_button"
        android:layout_marginTop="135dp"
        android:textSize="12sp"
        android:background="#25000000"
        android:layout_below="@+id/app_title"
        android:layout_toStartOf="@+id/hearing_button"
        android:onClick="launchSmellScreen" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="30sp"
        android:text="@string/hearing_button_label"
        android:id="@+id/hearing_button"
        android:background="#25000000"
        android:textSize="12sp"
        android:layout_marginEnd="124dp"
        android:layout_alignBottom="@+id/smell_button"
        android:layout_alignEnd="@+id/imageView"
        android:layout_marginBottom="10dp"
        android:onClick="launchHearingScreen" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="30sp"
        android:text="@string/taste_button_label"
        android:id="@+id/taste_button"
        android:background="#25000000"
        android:textSize="12sp"
        android:layout_above="@+id/sight_button"
        android:layout_alignStart="@+id/touch_button"
        android:onClick="launchTasteScreen" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="30sp"
        android:text="@string/sight_button_label"
        android:id="@+id/sight_button"
        android:textSize="12sp"
        android:background="#25000000"
        android:layout_marginStart="12dp"
        android:layout_alignBaseline="@+id/smell_button"
        android:layout_alignBottom="@+id/smell_button"
        android:layout_toEndOf="@+id/taste_button"
        android:onClick="launchSightScreen" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="60sp"
        android:layout_height="30sp"
        android:text="@string/touch_button_label"
        android:id="@+id/touch_button"
        android:background="#25000000"
        android:textSize="12sp"
        android:color="#80000000"
        android:layout_marginStart="12dp"
        android:layout_above="@+id/taste_button"
        android:layout_alignStart="@+id/hearing_button"
        android:layout_marginBottom="10dp"
        android:onClick="launchTouchScreen" />


</RelativeLayout>
